# uika

./: .gitignore  .mise.toml  AGENTS.md  BENCHMARKS.md  Cargo.toml  Makefile  PUBLISHING.md  README.md  jreleaser.yml
.github/: maven-settings.xml
.github/workflows/: ci.yml  publish-jvm-plugins.yml  publish-native-binaries.yml  publish-release.yml
binary-publishing/: build.gradle.kts  settings.gradle.kts
cli/: Cargo.toml
cli/src/: check.rs  classfile.rs  cli.rs  diff.rs  exclude.rs  extract.rs  gradle.rs  index.rs  input.rs  intern.rs  lib.rs  model.rs  reach.rs  report.rs  suggest.rs  window.rs
cli/tests/: integration.rs
cli/tests/fixtures/: README.md
gradle-plugin/: build.gradle.kts  settings.gradle.kts
gradle-plugin/src/main/java/net/exoego/uika/gradle/: DumpModuleClasspathTask.java  MergeClasspathTask.java  ResolveClasspathTask.java  UikaPlugin.java  UpgradeCheckTask.java
maven-plugin/: pom.xml
maven-plugin/src/it/dump-classpath/: invoker.properties  pom.xml  verify.groovy
maven-plugin/src/it/dump-classpath/app/: pom.xml
maven-plugin/src/it/upgrade-check/: invoker.properties  pom.xml  prebuild.groovy  uika-exclude.toml  verify.groovy
sbt-plugin/: build.sbt
sbt-plugin/.bsp/: sbt.json
sbt-plugin/src/sbt-test/uika/dump/: build.sbt  test
sbt-plugin/src/sbt-test/uika/dump/project/: plugins.sbt
sbt-plugin/src/sbt-test/uika/upgrade-check/: build.sbt  test  uika-exclude.toml
src/: check.rs  classfile.rs  cli.rs  diff.rs  extract.rs  index.rs  input.rs  intern.rs  main.rs  memstats.rs
tests/: integration.rs
tests/fixtures/: README.md
(+9 files in other folders)
