[package]
name = "uika"
version = "0.1.0"
edition = "2024"

[features]
# Memory breakdown investigation (counting allocator + per-phase reporting).
memstats = []

[dependencies]
mimalloc = "0.1"
rayon = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
walkdir = "2"
rustc-hash = "2.1.3"
cesu8 = "1.1.0"
flate2 = "1.1.9"
